methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:46: error: Unmatched closing brace '}' ignored here
}
^